--- a/package.json
+++ b/package.json
@@ -4,12 +4,62 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
   "devDependencies": {
+    "@angular-devkit/core": "~20.3.0",
+    "@angular-devkit/schematics": "~20.3.0",
+    "@angular/cli": "~20.3.0",
+    "@angular/compiler-cli": "~20.3.0",
+    "@angular/language-service": "~20.3.0",
+    "@eslint/js": "^9.8.0",
+    "@nx/angular": "^22.1.2",
+    "@nx/eslint": "22.1.2",
+    "@nx/eslint-plugin": "22.1.2",
+    "@nx/jest": "^22.1.2",
     "@nx/js": "22.1.2",
-    "nx": "22.1.2"
+    "@schematics/angular": "~20.3.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.14",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/utils": "^8.40.0",
+    "angular-eslint": "^20.3.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^10.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.6.1",
+    "jest-util": "^29.7.0",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~20.3.0",
+    "nx": "22.1.2",
+    "postcss": "^8.4.5",
+    "postcss-url": "~10.1.3",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "tslib": "^2.3.0",
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.40.0",
+    "verdaccio": "^6.0.5"
   },
   "workspaces": [
     "packages/*"
-  ]
+  ],
+  "dependencies": {
+    "@angular/common": "~20.3.0",
+    "@angular/compiler": "~20.3.0",
+    "@angular/core": "~20.3.0",
+    "@angular/forms": "~20.3.0",
+    "@angular/platform-browser": "~20.3.0",
+    "@angular/platform-browser-dynamic": "~20.3.0",
+    "@angular/router": "~20.3.0",
+    "@ngrx/signals": "^20.1.0",
+    "rxjs": "~7.8.0",
+    "zone.js": "~0.15.0"
+  },
+  "nx": {
+    "includedScripts": []
+  }
 }
