--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "@ng-spark/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "deploy:docs": "nx build docs --base-href=/ng-spark/ && npx gh-pages -d dist/docs/browser"
+  },
   "private": true,
   "devDependencies": {
     "@angular-devkit/core": "~20.3.0",
     "@angular-devkit/schematics": "~20.3.0",
+    "@angular/build": "~20.3.0",
     "@angular/cli": "~20.3.0",
     "@angular/compiler-cli": "~20.3.0",
     "@angular/language-service": "~20.3.0",
@@ -16,6 +19,7 @@
     "@nx/eslint-plugin": "22.1.2",
     "@nx/jest": "^22.1.2",
     "@nx/js": "22.1.2",
+    "@nx/web": "22.1.2",
     "@schematics/angular": "~20.3.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
@@ -27,6 +31,7 @@
     "autoprefixer": "^10.4.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.6.1",
@@ -48,14 +53,18 @@
     "packages/*"
   ],
   "dependencies": {
+    "@angular/cdk": "^21.0.1",
     "@angular/common": "~20.3.0",
     "@angular/compiler": "~20.3.0",
     "@angular/core": "~20.3.0",
     "@angular/forms": "~20.3.0",
+    "@angular/material": "^21.0.1",
     "@angular/platform-browser": "~20.3.0",
     "@angular/platform-browser-dynamic": "~20.3.0",
     "@angular/router": "~20.3.0",
     "@ngrx/signals": "^20.1.0",
+    "@types/highlight.js": "^9.12.4",
+    "highlight.js": "^11.11.1",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
