--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@angular/animations": "^21.0.1",
     "@angular/cdk": "^21.0.1",
     "@angular/common": "~20.3.0",
     "@angular/compiler": "~20.3.0",
