Add forms-x Angular library package
Introduces the new @ng-spark/forms-x Angular library with initial configuration files, build/test/lint setup, and TypeScript configs. Also updates tsconfig.base.json to include path mapping for the new package.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@ng-spark/signal-store-testing": [
         "packages/signal-store-testing/src/index.ts"
-      ]
+      ],
+      "@ng-spark/forms-x": ["packages/forms-x/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
