Add SignalArray utility for reactive array management
Introduces SignalArray, a class providing mutable-style methods for managing arrays in Angular signals while maintaining immutability. Updates package.json dependencies and re-exports SignalArray from the package entry point.

--- a/packages/forms-x/package.json
+++ b/packages/forms-x/package.json
@@ -2,8 +2,12 @@
   "name": "@ng-spark/forms-x",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "^20.3.0",
-    "@angular/core": "^20.3.0"
+    "@angular/common": ">=19.0.0",
+    "@angular/core": ">=19.0.0",
+    "@angular/forms": ">=19.0.0"
+  },
+  "dependencies": {
+    "tslib": "^2.3.0"
   },
   "sideEffects": false
 }
