--- a/packages/forms-x/package.json
+++ b/packages/forms-x/package.json
@@ -1,13 +1,46 @@
 {
   "name": "@ng-spark/forms-x",
-  "version": "0.0.1",
+  "version": "1.0.0",
+  "description": "Modern, signal-based form utilities for Angular including reactive array management, dirty state tracking, async validation, and debounced field binding",
+  "keywords": [
+    "angular",
+    "forms",
+    "signals",
+    "reactive",
+    "validation",
+    "async-validator",
+    "form-tracker",
+    "signal-array",
+    "debounce",
+    "angular-forms",
+    "angular-signals",
+    "typescript"
+  ],
+  "author": "NgSpark Team",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/khvedela/ng-spark.git",
+    "directory": "packages/forms-x"
+  },
+  "homepage": "https://khvedela.github.io/ng-spark",
+  "bugs": {
+    "url": "https://github.com/khvedela/ng-spark/issues"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": ">=19.0.0",
     "@angular/core": ">=19.0.0",
-    "@angular/forms": ">=19.0.0"
+    "@angular/forms": ">=19.0.0",
+    "rxjs": ">=7.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
