chore(release): update package version and release configuration
Set forms-x version to 0.0.0 for pre-release development and update Nx release configuration to enable independent project versioning and changelog generation.

--- a/nx.json
+++ b/nx.json
@@ -46,8 +46,14 @@
     }
   },
   "release": {
+    "projects": ["packages/*"],
+    "projectsRelationship": "independent",
     "version": {
       "preVersionCommand": "npx nx run-many -t build"
+    },
+    "changelog": {
+      "workspaceChangelog": false,
+      "projectChangelogs": true
     }
   },
   "generators": {
